Ticket #1575 fertig. "Replace this usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()'" in Zeile 378 und 387